refactor: Simplify architecture with direct Swift-to-web connection
- Re-implemented the Swift bridge as a WebSocket server using Hummingbird.
- Updated the frontend to connect directly to the Swift bridge.
- Removed the Python backend, simplifying the overall architecture.

--- a/src/kiosk.html
+++ b/src/kiosk.html
@@ -23,7 +23,7 @@
                 </div>
                 
                 <div id="instruction-panel">
-                    <p id="current-prompt">Click <strong>Start Scan</strong> to begin neurological assessment.</p>
+                    <p id="current-prompt">Click Start Scan to begin neurological assessment.</p>
                      <div id="logs"></div>
                     <button id="start-scan-btn">START SCAN</button>
                     <button id="record-audio-btn" style="display:none;">🎤 RECORD AUDIO</button>
